<?xml version="1.0" encoding="utf-8"?>
<com.rcs.nchumanity.view.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.rcs.nchumanity.view.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        app:layout_widthPercent="90%">


        <com.rcs.nchumanity.view.PercentLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_widthPercent="50%">


            <androidx.percentlayout.widget.PercentFrameLayout
                android:id="@+id/step_1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_select"
                app:layout_aspectRatio="100%"
                app:layout_widthPercent="30%">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/circle_fff"
                    android:src="@drawable/ic_jiuhuche"
                    app:layout_aspectRatio="100%"
                    app:layout_widthPercent="95%" />


            </androidx.percentlayout.widget.PercentFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/step_1"
                android:textColor="@color/black" />


        </com.rcs.nchumanity.view.PercentLinearLayout>

        <com.rcs.nchumanity.view.PercentLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_widthPercent="50%">


            <androidx.percentlayout.widget.PercentFrameLayout
                android:id="@+id/step_2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_select"
                app:layout_aspectRatio="100%"
                app:layout_widthPercent="30%">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/circle_fff"
                    android:src="@drawable/ic_jiuhuche"
                    app:layout_aspectRatio="100%"
                    app:layout_widthPercent="95%" />


            </androidx.percentlayout.widget.PercentFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/step_2"
                android:textColor="@color/black" />


        </com.rcs.nchumanity.view.PercentLinearLayout>


    </com.rcs.nchumanity.view.PercentLinearLayout>

    <com.rcs.nchumanity.view.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        app:layout_widthPercent="90%">


        <com.rcs.nchumanity.view.PercentLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_widthPercent="50%">


            <androidx.percentlayout.widget.PercentFrameLayout
                android:id="@+id/step_3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_select"
                app:layout_aspectRatio="100%"
                app:layout_widthPercent="30%">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/circle_fff"
                    android:src="@drawable/ic_jiuhuche"
                    app:layout_aspectRatio="100%"
                    app:layout_widthPercent="95%" />


            </androidx.percentlayout.widget.PercentFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/step_3"
                android:textColor="@color/black" />


        </com.rcs.nchumanity.view.PercentLinearLayout>

        <com.rcs.nchumanity.view.PercentLinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_widthPercent="50%">


            <androidx.percentlayout.widget.PercentFrameLayout
                android:id="@+id/step_4"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_select"
                app:layout_aspectRatio="100%"
                app:layout_widthPercent="30%">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:background="@drawable/circle_fff"
                    android:src="@drawable/ic_jiuhuche"
                    app:layout_aspectRatio="100%"
                    app:layout_widthPercent="95%" />


            </androidx.percentlayout.widget.PercentFrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center_horizontal"
                android:text="@string/step_4"
                android:textColor="@color/black" />


        </com.rcs.nchumanity.view.PercentLinearLayout>


    </com.rcs.nchumanity.view.PercentLinearLayout>


    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_aspectRatio="300%"
        app:layout_widthPercent="80%">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray_DBDBDB" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/black_frame">

            <TextView
                android:id="@+id/title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/step_5"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/bm1"
                android:layout_alignLeft="@+id/title1"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_frame"
                android:text="@string/bm" />

            <Button
                android:id="@+id/query1"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignRight="@+id/title1"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_frame"
                android:text="@string/cx" />


        </RelativeLayout>


    </androidx.percentlayout.widget.PercentRelativeLayout>


    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_aspectRatio="300%"
        app:layout_widthPercent="80%">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray_DBDBDB" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/black_frame">

            <TextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/step_6"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/bm2"
                android:layout_alignLeft="@+id/title2"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_frame"
                android:text="@string/bm" />

            <Button
                android:id="@+id/query2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_alignRight="@+id/title2"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="10dp"
                android:background="@drawable/black_frame"
                android:text="@string/cx" />

        </RelativeLayout>


    </androidx.percentlayout.widget.PercentRelativeLayout>


</com.rcs.nchumanity.view.PercentLinearLayout>